Some overflow bug fixes

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -85,6 +85,10 @@ a {
   box-shadow: none;
 }
 
+.logo {
+  align-content: center;
+}
+
 .logo svg {
     width: clamp(2rem, 8vw, 4rem);
     height: clamp(2rem, 8vw, 4rem);
