--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -16,7 +16,7 @@
 
     z-index: 1;
 
-    width: 100%;
+    width: calc(100% - 2 * 1rem);
     margin: auto -1rem;
 }
 
